@@ -2,5 +2,10 @@
 
 SUBDIRS = varconf doc tests
 
+bin_SCRIPTS = varconf-config
+
+m4datadir = $(datadir)/aclocal
+m4data_DATA = varconf.m4
+
 EXTRA_DIST = autogen.sh varconf.spec.in
 
