@@ -6,7 +6,7 @@ AC_INIT()
 dnl Information
 VARCONF_CURRENT=0
 VARCONF_REVISION=5
-VARCONF_AGE=0
+VARCONF_AGE=1
 VARCONF_VERSION=$VARCONF_CURRENT.$VARCONF_REVISION.$VARCONF_AGE
 VARCONF_PACKAGE=varconf
 MIN_SIGC_VERSION=1.0.0
@@ -134,42 +134,7 @@ dnl Test for C++ Standard Library
 dnl Test for <cstdio> header file
 AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
-AC_CHECK_HEADERS(cstdio)
-
-AC_LANG_RESTORE
-
-dnl Test for <iostream> header file
-AC_LANG_SAVE
-AC_LANG_CPLUSPLUS
-AC_CHECK_HEADERS(iostream)
-
-AC_LANG_RESTORE
-
-dnl Test for <list> header file
-AC_LANG_SAVE
-AC_LANG_CPLUSPLUS
-AC_CHECK_HEADERS(list)
-
-AC_LANG_RESTORE
-
-dnl Test for <map> header file
-AC_LANG_SAVE
-AC_LANG_CPLUSPLUS
-AC_CHECK_HEADERS(map)
-
-AC_LANG_RESTORE
-
-dnl Test for <string> header file
-AC_LANG_SAVE
-AC_LANG_CPLUSPLUS
-AC_CHECK_HEADERS(string)
-
-AC_LANG_RESTORE
-
-dnl Test for <vector> header file
-AC_LANG_SAVE
-AC_LANG_CPLUSPLUS
-AC_CHECK_HEADERS(vector)
+AC_CHECK_HEADERS(cstdio iostream list map string vector)
 
 AC_LANG_RESTORE
 
@@ -183,6 +148,15 @@ AM_PATH_SIGC($MIN_SIGC_VERSION,
   AC_ERROR(libsigc++ not found or version < $MIN_SIGC_VERSION) 
 ]) 
 
+SYSTEM_LIBS=
+AC_SUBST(SYSTEM_LIBS)
+
+VARCONF_LIBS=-lvarconf
+AC_SUBST(VARCONF_LIBS)
+
+VARCONF_CFLAGS=
+AC_SUBST(VARCONF_CFLAGS)
+
 dnl Generate files                         
 AC_OUTPUT([
 	Makefile
@@ -191,4 +165,5 @@ AC_OUTPUT([
         doc/old/Makefile
 	tests/Makefile
 	varconf/Makefile
+	varconf-config
 ])
